2013-02-19  Ethan A Merritt  <merritt@u.washington.edu>

	*  src/graphics.c (boundary):  Rotated x-axis tic labels are set
	automatically to right justify, but this happens too late for the code
	that reserves space for them.  Test for this as a special case.
	Bugs 1204, 1209

2013-02-18  Christoph Bersch  <cbersch@users.sf.net>

	* src/graphics.c:  Draw the zero axis lines in the same front/back
	layer as the axis and grid lines.

2013-02-17  W. Trevor King  <wking@tremily.us>

	* configure.in src/datafile.c (df_open) docs/gnuplot.doc:
	New special file syntax  "<&N"  plots data read from an arbitrary file
	descriptor.  This allows setting up multiple input pipes to gnuplot
	when it is invoked from a shell.

2013-02-17  Craig DeForest  <deforest@boulder.swri.edu>

	* src/datafile.c (df_readbinary):  Add special case code to read in a
	uniform binary matrix in one large chunk rather than reading one matrix
	element at a time.  When piping a 2000x2000 RGB matrix under linux this
	speeds the input stage from about 9 seconds to about 2 seconds.

2013-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c:
	-d or --default-settings Skip reading gnuplotrc and ~/.gnuplot on entry.

	* src/plot.c:
	Don't assume that X11_args() is there to help parse command line options.
	Bug #3601907

2013-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (invalid_command): When an invalid command is detected,
	advance the input parsing pointer (c_token) to the end of the command.
	Otherwise we're left in the middle of an invalid command after the
	error message is printed.

	* src/command.c (read_line):  Reset the token count to zero when
	starting to read a new line of input.  Otherwise if the read is
	interrupted by a mouse event requesting a replot then the internal
	state is not valid.  Test case:   cat | ./gnuplot      plot and zoom
	Bug #3602388

	* src/term.c (term_apply_lp_properties):  Always apply linetype color,